--- a/page/css/particulars.css
+++ b/page/css/particulars.css
@@ -477,6 +477,16 @@
   width: 350px;
   float: left;
   position: relative;
+  margin: 0px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .imgHover {
+  width: 97px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .small-img img {
+  width: 87px;
+  height: 82px;
 }
 
 #particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .hyb-p-pic {
@@ -515,14 +525,21 @@
 }
 
 #particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .hyb-p-list ul li img {
-  width: 55px;
+  width: 56px;
   height: 55px;
   display: inline-block;
   border: 2px solid #f86f76;
   padding: 0px;
 }
 
-#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .hyb-pic-leftBtn {
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .btnR {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  margin-bottom: 0px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .btnR .hyb-pic-leftBtn {
   display: block;
   width: 17px;
   height: 55px;
@@ -533,7 +550,7 @@
   bottom: 3px;
 }
 
-#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .hyb-pic-rightBtn {
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-left .btnR .hyb-pic-rightBtn {
   display: block;
   width: 17px;
   height: 55px;
@@ -758,7 +775,7 @@
   float: left;
 }
 
-.footer {
+#particulars .footer {
   width: 100%;
   height: 540px;
   background: #efefef;
@@ -767,44 +784,44 @@
   overflow: hidden;
 }
 
-.footer .inFooter {
+#particulars .footer .inFooter {
   width: 1200px;
   margin: 0px auto;
   height: 214px;
   position: relative;
 }
 
-.footer .inFooter .inFooterInfo ul {
+#particulars .footer .inFooter .inFooterInfo ul {
   float: left;
   width: 152px;
 }
 
-.footer .inFooter .inFooterInfo ul li {
+#particulars .footer .inFooter .inFooterInfo ul li {
   text-align: center;
 }
 
-.footer .inFooter .inFooterInfo ul li a {
+#particulars .footer .inFooter .inFooterInfo ul li a {
   font-size: 12px;
   height: 22px;
   color: #3c3c3c;
 }
 
-.footer .inFooter .inFooterInfo ul li:hover a {
+#particulars .footer .inFooter .inFooterInfo ul li:hover a {
   color: #f02e4b;
 }
 
-.footer .inFooter .inFooterInfo ul .bt {
+#particulars .footer .inFooter .inFooterInfo ul .bt {
   margin-bottom: 18px;
   border-right: 1px #cccccc solid;
 }
 
-.footer .inFooter .inFooterInfo ul .bt h3 {
+#particulars .footer .inFooter .inFooterInfo ul .bt h3 {
   font-size: 14px;
   font-weight: bold;
   height: 18px;
 }
 
-.footer .inFooter .inFooterKefu {
+#particulars .footer .inFooter .inFooterKefu {
   width: 240px;
   height: 160px;
   position: absolute;
@@ -814,44 +831,44 @@
   border-left: 1px solid #ccc;
 }
 
-.footer .inFooter .inFooterKefu h3 {
+#particulars .footer .inFooter .inFooterKefu h3 {
   text-align: center;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 5px;
 }
 
-.footer .inFooter .inFooterKefu p {
+#particulars .footer .inFooter .inFooterKefu p {
   font-size: 12px;
   text-align: center;
 }
 
-.footer .inFooter .inFooterKefu .q1 {
+#particulars .footer .inFooter .inFooterKefu .q1 {
   margin-bottom: 10px;
 }
 
-.footer .inFooter .inFooterKefu .q3 {
+#particulars .footer .inFooter .inFooterKefu .q3 {
   text-align: center;
 }
 
-.footer .inFooter .inFooterKefu .q3 img {
+#particulars .footer .inFooter .inFooterKefu .q3 img {
   margin-bottom: 5px;
 }
 
-.footer .inFooter .inFootercode {
+#particulars .footer .inFooter .inFootercode {
   width: 196px;
   float: right;
   text-align: center;
 }
 
-.footer .inFooter .inFootercode h3 {
+#particulars .footer .inFooter .inFootercode h3 {
   text-align: center;
   font-size: 14px;
   font-weight: bold;
   margin: 5px 0px;
 }
 
-.footer .inFooter .inFootercode p {
+#particulars .footer .inFooter .inFootercode p {
   font-size: 12px;
   margin-left: 45px;
   width: 110px;
@@ -859,13 +876,13 @@
   line-height: 22px;
 }
 
-.footer .footService {
+#particulars .footer .footService {
   background: #cccccc;
   width: 100%;
   text-align: center;
 }
 
-.footer .copyRight_con p {
+#particulars .footer .copyRight_con p {
   font-size: 12px;
   color: #333;
   line-height: 30px;
@@ -873,21 +890,21 @@
   text-align: center;
 }
 
-.footer .copyRight_con p img {
+#particulars .footer .copyRight_con p img {
   margin-bottom: 3px;
 }
 
-.footer .copyRight_con .a8 ul {
+#particulars .footer .copyRight_con .a8 ul {
   width: 1066px;
   margin: auto;
   overflow: hidden;
 }
 
-.footer .copyRight_con .a8 ul li {
+#particulars .footer .copyRight_con .a8 ul li {
   float: left;
   margin: 0px 20px;
 }
 
-.footer .copyRight_con .a8 span {
+#particulars .footer .copyRight_con .a8 span {
   margin: 0px 10px;
 }
