--- a/page/css/particulars.scss
+++ b/page/css/particulars.scss
@@ -529,6 +529,18 @@
                     width: 350px;
                     float: left;
                     position: relative;
+                    margin: 0px;
+
+                    .imgHover {
+                        width: 97px;
+                    }
+
+                    .small-img {
+                        img {
+                            width: 87px;
+                            height: 82px;
+                        }
+                    }
 
                     .hyb-p-pic {
                         width: 350px;
@@ -554,6 +566,8 @@
                             float: left;
                             width: 90000px;
 
+
+
                             li {
                                 display: block;
                                 width: 61px;
@@ -563,7 +577,7 @@
                                 cursor: pointer;
 
                                 img {
-                                    width: 55px;
+                                    width: 56px;
                                     height: 55px;
                                     display: inline-block;
                                     border: 2px solid #f86f76;
@@ -573,29 +587,36 @@
                         }
                     }
 
-
-
-                    .hyb-pic-leftBtn {
-                        display: block;
-                        width: 17px;
-                        height: 55px;
+                    .btnR {
                         position: absolute;
-                        background-image: url(../images/02/tpr2.png);
-                        background-repeat: no-repeat;
-                        left: 3px;
-                        bottom: 3px;
+                        bottom: 0px;
+                        left: 0px;
+                        margin-bottom: 0px;
+
+                        .hyb-pic-leftBtn {
+                            display: block;
+                            width: 17px;
+                            height: 55px;
+                            position: absolute;
+                            background-image: url(../images/02/tpr2.png);
+                            background-repeat: no-repeat;
+                            left: 3px;
+                            bottom: 3px;
+                        }
+
+
+                        .hyb-pic-rightBtn {
+                            display: block;
+                            width: 17px;
+                            height: 55px;
+                            position: absolute;
+                            background: url(../images/02/tpr2.png)no-repeat -30px 0px;
+                            right: 0px;
+                            bottom: 3px;
+                        }
                     }
 
 
-                    .hyb-pic-rightBtn {
-                        display: block;
-                        width: 17px;
-                        height: 55px;
-                        position: absolute;
-                        background: url(../images/02/tpr2.png)no-repeat -30px 0px;
-                        right: 0px;
-                        bottom: 3px;
-                    }
 
                 }
 
@@ -846,153 +867,155 @@
     }
 
 
-}
 
+    // 底部部分
+    .footer {
+        width: 100%;
+        height: 540px;
+        background: #efefef;
+        border-top: #ff3333 solid 2px;
+        padding-top: 24px;
+        overflow: hidden;
 
+        .inFooter {
+            width: 1200px;
+            margin: 0px auto;
+            height: 214px;
+            position: relative;
 
-// 底部部分
-.footer {
-    width: 100%;
-    height: 540px;
-    background: #efefef;
-    border-top: #ff3333 solid 2px;
-    padding-top: 24px;
-    overflow: hidden;
+            .inFooterInfo {
 
-    .inFooter {
-        width: 1200px;
-        margin: 0px auto;
-        height: 214px;
-        position: relative;
+                ul {
+                    float: left;
+                    width: 152px;
 
-        .inFooterInfo {
+                    li {
+                        text-align: center;
 
-            ul {
-                float: left;
-                width: 152px;
+                        a {
+                            font-size: 12px;
+                            height: 22px;
+                            color: #3c3c3c;
+                        }
 
-                li {
+                        &:hover a {
+                            color: #f02e4b;
+
+                        }
+                    }
+
+                    .bt {
+                        h3 {
+                            font-size: 14px;
+                            font-weight: bold;
+                            height: 18px;
+                        }
+
+                        margin-bottom: 18px;
+                        border-right: 1px #cccccc solid;
+                    }
+                }
+            }
+
+            .inFooterKefu {
+                width: 240px;
+                height: 160px;
+                position: absolute;
+                right: 199px;
+                top: 0px;
+                border-right: 1px solid #ccc;
+                border-left: 1px solid #ccc;
+
+                h3 {
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                }
+
+                p {
+                    font-size: 12px;
+                    text-align: center;
+                }
+
+                .q1 {
+                    margin-bottom: 10px;
+                }
+
+                .q3 {
                     text-align: center;
 
-                    a {
-                        font-size: 12px;
-                        height: 22px;
-                        color: #3c3c3c;
+                    img {
+                        margin-bottom: 5px;
                     }
-
-                    &:hover a {
-                        color: #f02e4b;
-
-                    }
-                }
-
-                .bt {
-                    h3 {
-                        font-size: 14px;
-                        font-weight: bold;
-                        height: 18px;
-                    }
-
-                    margin-bottom: 18px;
-                    border-right: 1px #cccccc solid;
                 }
             }
+
+            .inFootercode {
+                width: 196px;
+                float: right;
+                text-align: center;
+
+
+                h3 {
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: bold;
+                    margin: 5px 0px;
+                }
+
+                p {
+                    font-size: 12px;
+                    margin-left: 45px;
+                    width: 110px;
+                    text-align: center;
+                    line-height: 22px;
+                }
+            }
+
+
         }
 
-        .inFooterKefu {
-            width: 240px;
-            height: 160px;
-            position: absolute;
-            right: 199px;
-            top: 0px;
-            border-right: 1px solid #ccc;
-            border-left: 1px solid #ccc;
+        .footService {
+            background: #cccccc;
+            width: 100%;
+            text-align: center;
+        }
 
-            h3 {
-                text-align: center;
-                font-size: 14px;
-                font-weight: bold;
-                margin-bottom: 5px;
-            }
-
+        .copyRight_con {
             p {
                 font-size: 12px;
-                text-align: center;
-            }
-
-            .q1 {
-                margin-bottom: 10px;
-            }
-
-            .q3 {
+                color: #333;
+                line-height: 30px;
+                padding: 10px 0;
                 text-align: center;
 
                 img {
-                    margin-bottom: 5px;
+                    margin-bottom: 3px;
+                }
+
+            }
+
+            .a8 {
+                ul {
+                    width: 1066px;
+                    margin: auto;
+                    overflow: hidden;
+
+                    li {
+                        float: left;
+                        margin: 0px 20px;
+                    }
+                }
+
+                span {
+                    margin: 0px 10px;
                 }
             }
         }
-
-        .inFootercode {
-            width: 196px;
-            float: right;
-            text-align: center;
-
-
-            h3 {
-                text-align: center;
-                font-size: 14px;
-                font-weight: bold;
-                margin: 5px 0px;
-            }
-
-            p {
-                font-size: 12px;
-                margin-left: 45px;
-                width: 110px;
-                text-align: center;
-                line-height: 22px;
-            }
-        }
-
-
     }
 
-    .footService {
-        background: #cccccc;
-        width: 100%;
-        text-align: center;
-    }
-
-    .copyRight_con {
-        p {
-            font-size: 12px;
-            color: #333;
-            line-height: 30px;
-            padding: 10px 0;
-            text-align: center;
-
-            img {
-                margin-bottom: 3px;
-            }
-
-        }
-
-        .a8 {
-            ul {
-                width: 1066px;
-                margin: auto;
-                overflow: hidden;
-
-                li {
-                    float: left;
-                    margin: 0px 20px;
-                }
-            }
-
-            span {
-                margin: 0px 10px;
-            }
-        }
-    }
 }
+
+
+
