--- a/page/css/shopping.scss
+++ b/page/css/shopping.scss
@@ -1,4 +1,5 @@
-.register {
+.shopping {
+
     .content {
         width: 1200px;
         // background: #ccc;
@@ -480,279 +481,69 @@
         }
     }
 
-    // 注册和登录
-    .login {
-        width: 100%;
-        height: 717px;
 
-        .register_L {
-            width: 550px;
-            margin-left: 0%;
-            float: left;
-            // position: relative;
-            // z-index: -4;
 
-            h3 {
-                width: 100%;
-                text-align: center;
-                font-size: 24px;
-                color: #999999;
-                margin-top: 15px;
-                padding-bottom: 20px;
-            }
+    // 购物车
+    .cartMain {
 
-            table {
-                td {
-                    text-align: right;
-                    padding-bottom: 15px;
-                    padding-left: 10px;
-                    line-height: 100%;
-                    vertical-align: middle;
-
-                    button {
-                        position: absolute;
-                        width: 306px;
-                        line-height: 32px;
-                        font-size: 18px;
-                        color: #999999;
-                        float: left;
-                        margin-left: 38px;
-                        background: #fff;
-                        border: #cccccc solid 1px;
-                        cursor: pointer;
-                    }
-
-                    .lbl_msg {
-                        text-align: center;
-                        display: block;
-                        margin-top: 40px;
-                        color: Red;
-                        font-size: 10px;
-                        opacity: 0;
-                    }
-
-                    .ew {
-                        font-size: 12px;
-                        color: #333;
-                    }
-
-                    .TY {
-                        font-size: 12px;
-                        font-weight: bold;
-                        padding-left: 120px;
-                        margin-right: 265px;
-                    }
-
-                    .TU {
-                        margin-right: 32px;
-                    }
-                }
-
-                .table-tit {
-                    width: 140px;
-                    float: left;
-                    padding-top: 20px;
-                    color: #666;
-                    font-size: 12px;
-                }
-
-                .login-1 {
-                    width: 310px;
-                    height: 30px;
-                    line-height: 30px;
-                    background-color: #FFFFFF;
-                    border: #cccccc solid 1px;
-                    padding-left: 20px;
-                    color: #666666;
-                    font-size: 15px;
-                }
-
-                .login-2 {
-                    width: 310px;
-                    height: 30px;
-                    line-height: 30px;
-                    background-color: #FFFFFF;
-                    border: #cccccc solid 1px;
-                    padding-left: 20px;
-                    color: #666666;
-                    font-size: 15px;
-                }
-            }
+        .bar-wrapper {
+            position: inherit;
         }
 
-        .register_R {
-            width: 50%;
-            height: 607px;
-            float: left;
-            text-align: left;
-            margin-left: 20px;
+        .shop_info {
+            display: none;
+        }
 
-            .tit {
-                width: 100%;
-                text-align: center;
-                font-size: 24px;
-                color: #999999;
-                margin-top: 15px;
-                padding-bottom: 5px;
-            }
+        .cartMain_hd {
+            margin-left: 15px;
+        }
 
-            .login-nav {
-                width: 250px;
-                margin: 0 auto;
-                margin-top: 10px;
-                text-align: center;
-                padding-left: 50px;
-                overflow: hidden;
+        // .list_chk {
+        //     display: none;
+        // }
 
-                li {
-                    text-align: center;
-                    float: left;
-                    width: 100px;
-                    line-height: 30px;
-                    border: solid 1px #ddd;
-                    border-radius: 0px 8px 8px 0px;
+        .amount_box {
+            margin-left: 50px
+        }
 
-                    &:nth-child(1) {
-                        border-radius: 8px 0px 0px 8px;
-                        border-right: none;
-                    }
+        .order_lists {
+            text-align: center;
+        }
+
+        .list_con {
+            width: 360px;
+        }
 
 
-                }
+        .list_amount,
+        .list_sum {
+            width: 180px;
+        }
 
-                .selected {
-                    background: #EC8D36;
-                    color: #fff;
-                    border: solid 1px #EC8D36;
-                }
+        .list_price {
+            width: 180px;
 
-            }
+        }
 
+        .ip {
+            margin-left: 45px;
+        }
 
+        .list_op {
+            width: 190px;
 
+        }
 
+        .list_info {
+            width: 0px;
+        }
 
-            .mailbox {
-                margin-top: 25px;
-                overflow: hidden;
-
-
-                .form-group-error {
-                    border: #cc0904;
-                }
-
-                .mailbox_to {
-                    height: 67px;
-                    position: relative;
-
-
-                    .pass {
-                        position: absolute;
-                        right: 71px;
-                        top: 1px;
-                        width: 27px;
-                        height: 31px;
-                        background: #58bc58;
-                        text-align: center;
-                        line-height: 31px;
-                        display: none;
-                    }
-
-                    #captcha {
-                        width: 130px;
-                        height: 32px;
-                        position: absolute;
-                        top: 0px;
-                        margin-left: 5px;
-                    }
-
-                    label {
-                        width: 151px;
-                        display: inline-block;
-                        text-align: right;
-                        color: #666;
-                        font-size: 12px;
-                        // text-align: center;
-                    }
-
-                    .HY {
-                        margin-left: 10px;
-                        display: inline-block;
-                        padding: 6px;
-                        width: 100px;
-                        font-size: 12px;
-                        height: 18px;
-                        text-align: center;
-                        border: 1px solid #ccc;
-                        cursor: pointer;
-                    }
-
-                    span {
-                        font-size: 12px;
-                        position: absolute;
-                        right: 68px;
-                        top: 7px;
-                    }
-
-                    input {
-                        width: 310px;
-                        height: 30px;
-                        line-height: 30px;
-                        background-color: #FFFFFF;
-                        border: #cccccc solid 1px;
-                        padding-left: 20px;
-                        color: #666666;
-                        font-size: 15px;
-                        margin-left: 10px;
-
-
-                    }
-
-                    p {
-                        text-align: left;
-                        color: #666;
-                        font-size: 12px;
-                        margin-left: 165px;
-                    }
-
-                    .tu {
-                        width: 122px;
-                    }
-
-                    .tp {
-                        width: 122px;
-                    }
-
-
-                }
-
-
-                .form-item {
-                    height: 50px;
-                    text-align: center;
-
-                    label {
-                        font-size: 12px;
-                    }
-
-                    a {
-                        font-size: 12px;
-                    }
-
-                    .button {
-                        width: 328px;
-                        height: 36px;
-                        border: 1px solid #ccc;
-                    }
-                }
-
-                .agree {
-                    margin-left: 55px;
-                }
-            }
-
+        .list_con {
+            text-indent: 0px;
         }
     }
+
+
 
     // 底部部分
     .footer {
@@ -777,6 +568,7 @@
 
                     li {
                         text-align: center;
+                        height: 22px;
 
                         a {
                             font-size: 12px;
@@ -816,10 +608,12 @@
                     text-align: center;
                     font-size: 14px;
                     font-weight: bold;
-                    margin-bottom: 5px;
+                    margin-bottom: 7px;
                 }
 
                 p {
+                    height: 20px;
+
                     font-size: 12px;
                     text-align: center;
                 }
